# neuralgentics

./: .gitignore  .secrets.baseline  404.html  AGENTS.md  CHANGELOG.md  CONTEXT.md  HANDOFF.md  LICENSE  Makefile  README.md  TASKS.md  agent-skill-scope.yaml  compose.example.env  docker-compose.yml  go.work  go.work.sum  index.html  mkdocs.yml  neuralgentics  package.json  podman-compose.yml  presets.json  pyproject.toml  sitemap.xml  tsconfig.json
.opencode/: opencode.json  package-lock.json  package.json
AGENT_REGISTRATION_RESEARCH/: index.html
ARCHITECTURE_PLAN_V5/: index.html
BGE_GPU_OOM_INVESTIGATION/: index.html
CLEANUP_C1_DELETE_CORE/: index.html
CLEANUP_C3_DELETE_PYTHON_BROKER/: index.html
DESIGN_core_v1/: index.html
DESIGN_fine_grained_scoping_v1/: index.html
DESIGN_stateless_agents_v1/: index.html
EXTRACTION/: index.html
GO_MEMORY_PLAN/: index.html
NEURALGENTICS_PATCHES/: index.html
PUBLISH-SETUP/: index.html
archive/: index.html
changelog/: index.html
development/: index.html
docker/: backend.Dockerfile  postgres.Dockerfile  sidecar.Dockerfile  tui.Dockerfile
docs/: AGENT_REGISTRATION_RESEARCH.md  ARCHITECTURE.md  BGE_GPU_OOM_INVESTIGATION.md  CLEANUP_C1_DELETE_CORE.md  DESIGN_core_v1.md  DESIGN_fine_grained_scoping_v1.md  DESIGN_stateless_agents_v1.md  EXTRACTION.md  NEURALGENTICS_PATCHES.md  PUBLISH-SETUP.md  changelog.md  development.md  index.md  migrating-from-v0.6.md  roadmap-v0.1.0-p1.md  roadmap-v0.1.0.md  sidecar-setup.md  troubleshooting.md
migrating-from-v0.6/: index.html
neuralgentics-cli/: .gitignore  CHANGELOG.md  README.md  pyproject.toml
neuralgentics-cli/src/neuralgentics/: __init__.py  cli.py  compose.py  doctor_cmd.py  download.py  errors.py  extract.py  init_cmd.py  merge.py  state.py  update_cmd.py  version_cmd.py
neuralgentics-cli/tests/: conftest.py  test_cli_main.py  test_compose.py  test_doctor.py  test_download.py  test_errors.py  test_init.py  test_merge.py  test_state.py  test_update.py  test_version.py
patches/: 001-agent-registry.patch  002-loop-injection.patch  003-task-routing.patch  004-system-prompt.patch  005-rebrand.patch  006-plugin.patch  007-updater.patch  rebrand.patch
roadmap-v0.1.0/: index.html
roadmap-v0.1.0-p1/: index.html
scripts/: .env.example  (+23 more)
(+209 files in other folders)
