[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "neuralgentics"
version = "0.1.3"
description = "Bootstrapper CLI for the neuralgentics OpenCode plugin"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Veedubin"},
]
keywords = ["opencode", "neuralgentics", "ai", "agent", "plugin", "bootstrapper"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "httpx>=0.28,<1",
    "pydantic>=2,<3",
]

[project.scripts]
neuralgentics = "neuralgentics.cli:main"

[project.urls]
Homepage = "https://github.com/Veedubin/neuralgentics"
Repository = "https://github.com/Veedubin/neuralgentics"
Issues = "https://github.com/Veedubin/neuralgentics/issues"
Changelog = "https://github.com/Veedubin/neuralgentics/blob/main/neuralgentics-cli/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "ruff>=0.6,<1",
    "mypy>=1.11,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/neuralgentics"]

[tool.pytest.ini_options]
markers = [
    "e2e: end-to-end tests (require network, skipped by default)",
]
addopts = "-m 'not e2e' --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true